test/otel/config.yaml
exporters:
  logging:
    loglevel: DEBUG
receivers:
  otlp:
    protocols:
      grpc:
        endpoint: 0.0.0.0:4317
      http:
        endpoint: 0.0.0.0:4318
service:
  pipelines:
    traces:
      receivers:
      - otlp
      exporters:
      - logging
    logs:
      receivers:
      - otlp
      exporters:
      - logging
    metrics:
      receivers:
      - otlp
      exporters:
      - logging
