test/otel/gwc.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: ace
spec: 
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef: # check envoyproxy.yaml 
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: custom-proxy-config
    namespace: ace
